--- a/hiera/versions.yaml
+++ b/hiera/versions.yaml
@@ -5,6 +5,7 @@ versions::accrual: baseline
 versions::agreement: baseline
 versions::assist_web: baseline
 versions::assist_web_services: baseline
+versions::baar_mock: FY15QX_Aug_Qrtly
 versions::billing: baseline
 versions::birt_app: baseline
 versions::birt_reports: baseline
