CM - Initial Commit. JBoss 6.4 instance installation on the assist box thus far.

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -13,7 +13,7 @@ machine_conf::hosts::dmz_subnet_base: 172.22.12
 machine_conf::hosts::backend_subnet_base: 172.22.12
 # END   Local
 
-machine_conf::repo::repo_url: http://mirror.techflow.com/techflow/centos/%{::operatingsystemmajrelease}/x86_64/
+# machine_conf::repo::repo_url: http://9f360c3d418ff28d5eb0a57bc2b1f0a4-software.s3-website-us-east-1.amazonaws.com/ 
 
 deploy_baar_mock: true
 
