put 3rd party modules in a system location and not in the environmental area

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,20 +4,17 @@
 # Reference: https://git-scm.com/book/en/v2/Git-Tools-Submodules
 
 [submodule "modules/stdlib"]
-	path = modules/stdlib
+	path = ../../modules/stdlib
 	url = https://github.com/puppetlabs/puppetlabs-stdlib
 [submodule "modules/epel"]
-	path = modules/epel
+	path = ../../modules/epel
 	url = https://github.com/stahnma/puppet-module-epel
 [submodule "modules/concat"]
-	path = modules/concat
+	path = ../../modules/concat
 	url = https://github.com/puppetlabs/puppetlabs-concat
 [submodule "modules/timezone"]
-	path = modules/timezone
+	path = ../../modules/timezone
 	url = https://github.com/saz/puppet-timezone
-[submodule "ec2tagfacts"]
-	path = ec2tagfacts
-	url = https://github.com/BIAndrews/ec2tagfacts
 [submodule "modules/ec2tagfacts"]
-	path = modules/ec2tagfacts
+	path = ../../modules/ec2tagfacts
 	url = https://github.com/BIAndrews/ec2tagfacts
