cleanup file origin placement, add confdir error checking

--- a/modules/bootstrap/files/facter/facter.conf
+++ b/modules/bootstrap/files/facter/facter.conf
@@ -14,11 +14,15 @@ global : {
 # MP: this is a crutch since FACT-42 was not implemented.
 # can be deprecated once https://github.com/puppetlabs/facter/pull/1614 gets imported.
     external-dir     : [
-	"/opt/puppetlabs/facter/facts.d", 
-	"/etc/facter/facts.d",
-	"/etc/puppetlabs/facter/facts.d"
+        "/opt/puppetlabs/facter/facts.d", 
+        "/etc/facter/facts.d",
+        "/etc/puppetlabs/facter/facts.d"
     ],
-#    custom-dir       : [ "custom/path" ],
+    custom-dir       : [ 
+        "/opt/puppetlabs/facter",
+        "/etc/facter",
+        "/etc/puppetlabs/facter"
+    ],
 #    no-exernal-facts : false,
 #    no-custom-facts  : false,
 #    no-ruby          : false
