--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,17 +1,26 @@
 ---
 version: 5
 
+defaults:
+  data_hash: yaml_data
+  datadir: hieradata
+
 # https://docs.puppet.com/hiera/3.1/variables.html#where-to-interpolate-data
 #https://codingbee.net/tutorials/puppet/puppet-working-with-a-dynamic-hiera-yaml-file
 # first match wins!, puppet automaticlaly exposes all facters and 'puppet config print' items
 hierarchy:
-  - name: "instances"
-    path: instance/%{ec2_tag.instance}.yaml
-  - name: "roles"
-    path: role/%{ec2_tag.role}.yaml
+# these are handled at the module level
+   - name: "environment"
+     path: environments/%{facts.environment}.yaml
+   - name: "lab"
+     path: environments/%{facts.ec2_tag.lab}.yaml
+#  - name: "instances"
+#    path: instance/%{facts.ec2_tag.puppet.instance}.yaml
+#  - name: "roles"
+#    path: role/%{ec2_tag.puppet.role}.yaml
   - name: "operating system"
-    path: os/%{os.family}.yaml
-  - name: "datasources"
+    path: os/%{facts.os.family}.yaml
+  - name: "datasource"
     path: datasources.yaml
   - name: "last ditch"
     path: common.yaml
@@ -19,5 +28,3 @@ hierarchy:
 # to merge Arrays & Hashes; 'hiera --merge-array-hash ...'
 #XXX need 'gem install deep_merge' for it to work?
 
-defaults:
-  data_hash: yaml_data
