--- a/hieradata/versions.yaml
+++ b/hieradata/versions.yaml
@@ -34,7 +34,7 @@ versions::web_audit_admin: baseline
 
 # versions:
   # jboss:    6.4
-  # java:     '8u131'
+  # java:     8u131
   # fuse:
   # wildfly:  '~> 12.0'
   # tomcat:   '~> 8.0.50'
