--- a/modules/gsajboss6/hieradata/common.yaml
+++ b/modules/gsajboss6/hieradata/common.yaml
@@ -74,7 +74,7 @@ gsajboss6::install::file:
 
 gsajboss6::java::version: 8u131
 gsajboss6::java::package:
-    "jre-%{lookup('gsajboss6::java::version')}-linux-x64"
+    "jre-%{lookup('gsajboss6::java::version')}-linux-x64.rpm"
   #source: "%{facts.os.dirst.temp"
   # Facters capitalized and need match for 'x64' and 'linux'
 
