--- a/modules/gsajboss6/hiera.yaml
+++ b/modules/gsajboss6/hiera.yaml
@@ -6,9 +6,11 @@ defaults:
   datadir: hieradata
 
 hierarchy:
-  - name: "OS family"
-    path: "os/%{facts.os.family}.yaml"
-  - name: "OS kernel"
-    paths: [ "os/%{facts.kernel}.yaml", 'os/unix.yaml' ]
-  - name: "common"
+#  - name: OS family
+#    path: "os/%{facts.os.family}.yaml"
+#  - name: OS kernel
+#    paths:
+#      - "os/%{facts.kernel}.yaml"
+#      - os/unix.yaml
+  - name: common
     path: common.yaml
