--- a/modules/os/hieradata/RedHat.yaml
+++ b/modules/os/hieradata/RedHat.yaml
@@ -18,3 +18,34 @@ os::groups:
     gid: 81
   nfsnobody:
     gid: 65534
+
+os::package:
+  suffix: .rpm
+#  method: rpm|yum - not needed for Package[] but might be helpful for logic conditionals
+
+os::packages:
+  java6:    # '1.6.0.41'
+    name: java-1.6.0-openjdk
+  java7:    # '1.7.0.171'
+    name: java-1.7.0-openjdk
+  java8:    # '1.8.0.161'
+    &java_default
+    name: java-1.8.0-openjdk
+  java:
+    <<: *java_default
+  jre:      # Oracle's last unencumbered release available in standard repos
+    name: jre1.8.0_131
+  jdk6:
+    name: java-1.6.0-openjdk-devel
+  jdk7:
+    name: java-1.7.0-openjdk-devel
+  jdk8: &jdk_default
+    name: java-1.8.0-openjdk-devel
+  jdk:
+    <<: *jdk_default
+  #alternative - last unemcumbered public release and included in standard YUM repos
+#    name: jre1.8.0_131
+#    version: '1.8.0_131'
+  #Oracle download website - http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html
+#    name: jre-8u161-linux-x64
+#    version: 8u161
